--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@
 body {
   background-color: hsl(0, 0%, 95%);
   font-family: 'Lexend Deca', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1, button{
@@ -40,11 +43,20 @@ p {
   max-width: 375px;
   margin: 2rem auto;
   padding: 0 40px;
+  display: flex;
+  flex-direction: column;
 }
 .company-container {
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+}
+.company-container section {
+  max-width: 350px;
+  align-self: stretch;
+}
+.company__description {
+  margin-bottom: 40px;
 }
 .company__title h1 {
   padding: 15px 0;
@@ -77,3 +89,11 @@ p {
   padding: 40px;
 }
 
+@media only screen and (min-width: 760px) {
+  .container {
+    max-width: 1440px;
+  }
+  .company-container {
+    flex-direction: row;
+  }
+}
